# cert-management

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml
backend-go/: README.md  crypto.go  go.mod  handlers.go  main.go  models.go
backend-java/: README.md  pom.xml
backend-java/src/main/java/com/certmgmt/: Application.java
backend-java/src/main/java/com/certmgmt/config/: AppConfig.java  Env.java  WebConfig.java
backend-java/src/main/java/com/certmgmt/controller/: AuthController.java  HealthController.java  (+1 more)
backend-java/src/main/resources/: application.properties
backend-node/: README.md  package-lock.json  package.json
backend-node/src/: app.js  auth.js  chain.js  config.js  csr.js  db.js  errors.js  keycrypto.js  keys.js  server.js
backend-rust/: Cargo.toml  README.md
backend-rust/src/: auth.rs  chain.rs  crypto.rs  csr.rs  error.rs  handlers.rs  main.rs
contracts/: openapi.yaml
db/init/: 01-schema.sql
docs/: HOW-TO.md  index.html
scripts/: relay.sh  smoke.sh
ui/: README.md  pubspec.yaml
ui/lib/: main.dart
ui/lib/api/: client.dart
ui/lib/models/: audit_event.dart  key_detail.dart  key_summary.dart
ui/lib/screens/: connect_screen.dart  docs_screen.dart  key_detail_screen.dart  keys_list_screen.dart
ui/lib/util/: format.dart
ui/lib/widgets/: pem_box.dart  status_chip.dart
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: live_api_test.dart  widget_test.dart
ui/web/: index.html  manifest.json
(+13 files in other folders)
