[package]
name = "cert-mgmt-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
base64 = "0.22"
rand = "0.8"
subtle = "2"
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem", "std"] }
spki = { version = "0.7", features = ["pem", "std"] }
der = { version = "0.7", features = ["pem", "std"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
x509-parser = { version = "0.16", features = ["verify"] }
aes-gcm = "0.10"

[profile.release]
opt-level = 2
